--- a/test.html
+++ b/test.html
@@ -15,7 +15,8 @@ var content = [{
     deviceid: "JuTrack",
     sensorname: "K6DS3TR Acceleration Sensor",
     timestamp: 1565120127628,
-    username: "JuTrack"
+    username: "JuTrack",
+    studyId: "StudyTest"
   },
   {
     x: -0.50040346,
@@ -24,7 +25,8 @@ var content = [{
     deviceid: "JuTrack",
     sensorname: "K6DS3TR Acceleration Sensor",
     timestamp: 1565120127631,
-    username: "JuTrack"
+    username: "JuTrack",
+    studyId: "StudyTest"
   },
   {
     x: -0.55307746,
@@ -33,7 +35,8 @@ var content = [{
     deviceid: "JuTrack",
     sensorname: "K6DS3TR Acceleration Sensor",
     timestamp: 1565120127641,
-    username: "JuTrack"
+    username: "JuTrack",
+    studyId: "StudyTest"
   }
 	]
 
